# mcp-auth-middleware

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: k8s-deployment.yaml  server.py
mcp_auth_middleware/: __init__.py  cli.py  middleware.py  verifier.py
tests/: test_cli.py  test_middleware.py  test_verifier.py
